--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@heroicons/vue": "^2.1.3",
     "@types/vue-router": "^2.0.0",
     "dayjs": "^1.11.11",
@@ -17,6 +18,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.55.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
