--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
@@ -18,13 +19,21 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.10.2",
     "@types/google.maps": "^3.55.8",
+    "@types/jsdom": "^21.1.6",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.2.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vitest": "^1.6.0",
     "vue-tsc": "^2.0.6"
   }
 }
